2006-09-29  Al Riddoch  <alriddoch@zepler.org>

	* New package to wrap various WorldForge libraries for Python